# den-hoag

./: .gitignore  MIGRATION.md  README.md  REFERENCE.md  default.nix  eval-debug-classes.nix  eval-debug-cortex-classes.nix  eval-debug-flake-classes.nix  eval-debug-translate.nix  flake.nix  patch-compile-recursive.nix  patch.nix  patch.patch  test-all-together.nix  test-anything-func-arg.nix  test-anything-list.nix  test-anything.nix  test-args.nix  test-build-exact.nix  test-call.nix  test-compat-recursion.nix  test-compile-default.nix  test-config-name.nix  test-deferred-gen-merge.nix  test-deferred-output.nix  test-deferred-output2.nix  test-deferred-output3.nix  test-deferred.nix  test-discover-channels.nix  test-discover-kinds.nix  test-dispatch.nix  test-dump.nix  test-evalv1-exact.nix  test-exact-eval2.nix  test-exact-eval3.nix  test-gen-merge-2.nix  test-gen-merge-exact.nix  test-gen-merge-freeform.nix  test-gen-merge-schema.nix  test-gen-merge-submodule-func.nix  (+18 more)
ci/: flake.nix
lib/: build-roots.nix  concern-aspects.nix  concern-classes.nix  concern-collectors.nix  concern-derived.nix  concern-disciplines.nix  concern-policies.nix  concern-productions.nix  concern-quirks.nix  concern-relations.nix  declarations.nix  dedup-by-key.nix  default.nix  demand.nix  edges.nix  entity.nix  errors.nix  fleet.nix  graph-escape.nix  identity-preimage.nix  identity.nix  key-semantics.nix  linearization.nix  module-shape.nix  nest.nix  outputs.nix  production-guard.nix  products.nix  (+10 more)
lsp-mcp/: Cargo.toml  README.md
lsp-mcp/src/: main.rs  tools.rs
lsp-mcp/tests/: smoke.rs
(+347 files in other folders)
